--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-docs": "^5.3.18",
+    "@storybook/addon-knobs": "^5.3.18",
+    "@storybook/preset-create-react-app": "^2.1.1",
     "@storybook/react": "^5.3.18",
     "@types/classnames": "^2.2.10"
   }
