--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@storybook/addon-knobs": "^5.3.18",
     "@storybook/preset-create-react-app": "^2.1.1",
     "@storybook/react": "^5.3.18",
-    "@types/classnames": "^2.2.10"
+    "@types/classnames": "^2.2.10",
+    "node-sass": "^4.13.1"
   }
 }
